# scorep_plugin_nvml

./: CMakeLists.txt
include/: nvml_wrapper.hpp
